Wrote some more

--- a/references.bib
+++ b/references.bib
@@ -4173,6 +4173,14 @@
   url		= {https://ggplot2.tidyverse.org}
 }
 
+@Manual{rlang2024,
+    title = {rlang: Functions for Base Types and Core R and 'Tidyverse' Features},
+    author = {Lionel Henry and Hadley Wickham},
+    year = {2024},
+    note = {R package version 1.1.4},
+    url = {https://CRAN.R-project.org/package=rlang},
+  }
+
 @Book{		  wickham2019,
   title		= {Advanced R},
   author	= {Wickham, Hadley},
